--- a/C_221209/C_221209.vcxproj
+++ b/C_221209/C_221209.vcxproj
@@ -129,17 +129,33 @@
   <ItemGroup>
     <ClInclude Include="Base.h" />
     <ClInclude Include="BingoGame.h" />
+    <ClInclude Include="Dictionary.h" />
+    <ClInclude Include="Editor.h" />
+    <ClInclude Include="FileIo.h" />
+    <ClInclude Include="Homework.h" />
+    <ClInclude Include="MenuCycle.h" />
     <ClInclude Include="SlidePuzzleGame.h" />
+    <ClInclude Include="String.h" />
+    <ClInclude Include="Struct.h" />
     <ClInclude Include="Test.h" />
     <ClInclude Include="UsefulFunc.h" />
     <ClInclude Include="UsefulType.h" />
+    <ClInclude Include="WordGame.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BingoGame.cpp" />
+    <ClCompile Include="Dictionary.cpp" />
+    <ClCompile Include="Editor.cpp" />
+    <ClCompile Include="FileIo.cpp" />
+    <ClCompile Include="Homework.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="MenuCycle.cpp" />
     <ClCompile Include="SlidePuzzleGame.cpp" />
+    <ClCompile Include="String.cpp" />
+    <ClCompile Include="Struct.cpp" />
     <ClCompile Include="Test.cpp" />
     <ClCompile Include="UsefulFunc.cpp" />
+    <ClCompile Include="WordGame.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
